force-app/main/default/objects/CRMC_PP__ActionGrid_Request__c/fields/CRMC_PP__FieldName__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__FieldName__c</fullName>
    <description>API name of the field being monitored.</description>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>