force-app/main/default/objects/CRMC_PP__ActionGrid_Request__c/fields/CRMC_PP__IsCompleted__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__IsCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Conga Grid Request Action completed.</description>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>