force-app/main/default/objects/CRMC_PP__ActionGrid_Request__c/fields/CRMC_PP__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__ObjectName__c</fullName>
    <description>API name of the object being monitored.</description>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>