force-app/main/default/objects/CRMC_PP__ActionGrid_Request__c/fields/CRMC_PP__RecordId__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__RecordId__c</fullName>
    <description>Record Id text.</description>
    <label>RecordId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>